force-app/main/default/objects/Case_Tracking_Detail__c/Case_Tracking_Detail__c.object-meta.xml
<CustomObject>
    <description>This object is to capture detailed status of contact creation and updation across various channels.</description>
    <label>Case Tracking Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Tracking Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Tracking Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>