force-app/main/default/objects/Case_Tracking_Detail__c/fields/ARTL_Step_4_Description__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Step_4_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Solace callout Sync</label>
    <length>255</length>
    <type>Text</type>
</CustomField>