force-app/main/default/objects/Case_Tracking_Detail__c/fields/ARTL_Step_4_Status__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Step_4_Status__c</fullName>
    <label>Final Solace Callout Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>