force-app/main/default/objects/Case_Tracking_Detail__c/fields/OperationType__c.field-meta.xml
<CustomField>
    <fullName>OperationType__c</fullName>
    <label>OperationType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UPDATE</fullName>
            </value>
            <value>
                <fullName>CREATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>