force-app/main/default/objects/Case_Tracking_Detail__c/fields/SF_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_Record_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SF Record ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>