force-app/main/default/objects/Case_Tracking_Detail__c/fields/Step1__c.field-meta.xml
<CustomField>
    <fullName>Step1__c</fullName>
    <label>Contact Upsert Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>