force-app/main/default/objects/Case_Tracking_Detail__c/fields/Step_3_Description__c.field-meta.xml
<CustomField>
    <fullName>Step_3_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Solace Inbound Sync</label>
    <length>255</length>
    <type>Text</type>
</CustomField>